--- a/src/components/TodoListItem/styles.css
+++ b/src/components/TodoListItem/styles.css
@@ -2,8 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 400px;
-  margin: 0 auto 5px;
+  width: 450px;
+  margin:  auto 5px;
   cursor: pointer;
 }
 
